--- a/CV.Management.Web/Views/Shared/EditorTemplates/EducationViewModel.cshtml
+++ b/CV.Management.Web/Views/Shared/EditorTemplates/EducationViewModel.cshtml
@@ -9,7 +9,7 @@
             <div class="col-xs-12">
                 <div class="row">
                     <div class="col-xs-12">
-                        <h5 class="uppercase">@Resources.EducationEntry #<span class="company-number">@(i + 1)</span></h5>
+                        <h5 class="uppercase">@Resources.EducationEntry #<span class="education-number">@(i + 1)</span></h5>
                     </div>
                 </div>
             </div>
