Configuration moved to connection strings and environment variables.

--- a/CV.Management.Web/Views/Cv/Profile.cshtml
+++ b/CV.Management.Web/Views/Cv/Profile.cshtml
@@ -143,7 +143,7 @@
         </div>
     </div>
 
-    <div class="col-xs-12">
+    <div class="col-xs-12 save-button">
         <div class="row">
             <div class="col-xs-12">
                 <div class="form-group text-right">
