--- a/CV.Management.Web/Views/Admin/_AdminLayout.cshtml
+++ b/CV.Management.Web/Views/Admin/_AdminLayout.cshtml
@@ -36,11 +36,16 @@
     </div>
     <div class="container body-content">
         @RenderBody()
+        
+
+    </div>
+    <div class="container">
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - Amrop</p>
         </footer>
     </div>
+    
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/jqueryval")
