--- a/CV.Management.Web/Views/Error/Index.cshtml
+++ b/CV.Management.Web/Views/Error/Index.cshtml
@@ -7,5 +7,5 @@
 
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
-<p>Contact support via X</p>
+<p>Contact support via rolands.krumbergs@outlook.com (+37127164700)</p>
 <p>Reference code: @Model.TraceId </p>
