--- a/CV.Management.Web/Views/Shared/_Layout.cshtml
+++ b/CV.Management.Web/Views/Shared/_Layout.cshtml
@@ -71,7 +71,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Amrop</p>
+            <p>&copy; @DateTime.Now.Year - Amrop. @Resources.RightsReserved <a href="@Resources.PrivacyLink">@Resources.Privacy</a></p>
         </footer>
     </div>
 
