--- a/CV.Management.Web/Views/Cv/Profile.cshtml
+++ b/CV.Management.Web/Views/Cv/Profile.cshtml
@@ -15,9 +15,13 @@
     </div>
 </div>
 
+
+
 @using (Html.BeginForm("ProfileSummary", "Cv", FormMethod.Post, new { encType = "multipart/form-data", id = "profile_form" }))
 {
     @Html.AntiForgeryToken()
+
+    @Html.HiddenFor(m => m.Username)
 
     <div class="panel-group" id="accordion">
         <div class="panel panel-default">
