--- a/CV.Management.Web/Views/Shared/Error.cshtml
+++ b/CV.Management.Web/Views/Shared/Error.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Error";
-    Layout = "_AccountLayout.cshtml";
+    Layout = "~/Views/Account/_AccountLayout.cshtml";
 }
 
 <h1 class="text-danger">Error.</h1>
