--- a/CV.Management.Web/Views/Shared/Lockout.cshtml
+++ b/CV.Management.Web/Views/Shared/Lockout.cshtml
@@ -2,7 +2,7 @@
 
 @{
     ViewBag.Title = "Locked Out";
-    Layout = "_AccountLayout.cshtml";
+    Layout = "~/Views/Account/_AccountLayout.cshtml";
 }
 
 <hgroup>
