--- a/CV.Management.Web/Views/Account/Login.cshtml
+++ b/CV.Management.Web/Views/Account/Login.cshtml
@@ -12,6 +12,7 @@
             {
                 @Html.AntiForgeryToken()
 
+            <div class="container">
                 <div class="row">
                     <div class="col-md-4 col-md-offset-4">
                         <img src="~/Content/Images/logo.png" alt="Amrop" class="login-image">
@@ -68,6 +69,9 @@
                         </span>
                     </div>
                 </div>
+            </div>
+
+                
             }
 
             <div class="row">
