--- a/CV.Management.Web/Views/Admin/_AdminLayout.cshtml
+++ b/CV.Management.Web/Views/Admin/_AdminLayout.cshtml
@@ -8,7 +8,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
-
+    <script src="https://kit.fontawesome.com/c308bf5ea0.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
