--- a/CV.Management.Web/Views/Shared/_Layout.cshtml
+++ b/CV.Management.Web/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     @Scripts.Render("~/bundles/modernizr")
 
 
-    <script type = 'text/javascript' >
+    <script type='text/javascript'>
         var appInsights=window.appInsights||function(config)
         {
             function r(config){ t[config] = function(){ var i = arguments; t.queue.push(function(){ t[config].apply(t, i)})} }
@@ -20,10 +20,12 @@
         }({
             instrumentationKey:'@Microsoft.ApplicationInsights.Extensibility.TelemetryConfiguration.Active.InstrumentationKey'
         });
-        
+
         window.appInsights=appInsights;
         appInsights.trackPageView();
     </script>
+
+    <script src="https://kit.fontawesome.com/c308bf5ea0.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -67,7 +69,7 @@
             </div><!-- /.container-fluid -->
         </nav>
     </div>
-    <div class="container body-content">
+    <div class="container">
         @RenderBody()
         <hr />
         <footer>
