--- a/CV.Management.Web/Views/Account/ResetPassword.cshtml
+++ b/CV.Management.Web/Views/Account/ResetPassword.cshtml
@@ -52,9 +52,11 @@
                 </div>
             </div>
 
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    <input type="submit" class="btn btn-primary" value="Reset" />
+            <div class="row">
+                <div class="col-md-4 col-md-offset-4">
+                    <div class="form-group">
+                        <input type="submit" class="btn btn-primary" value="Reset" />
+                    </div>
                 </div>
             </div>
         }
