--- a/CV.Management.Web/Views/Admin/Overview.cshtml
+++ b/CV.Management.Web/Views/Admin/Overview.cshtml
@@ -7,6 +7,12 @@
 <div class="container">
 
     <div class="row">
+        <div class="col-md-12 create-user-button">
+                @Html.ActionLink("Create new profile", "Create", "Cv", null, new { @class = "btn btn-primary create-user-button" })
+        </div>
+    </div>
+
+    <div class="row">
         <div class="col-md-12">
             <table class="table">
                 <thead>
