--- a/CV.Management.Web/Views/Manage/Index.cshtml
+++ b/CV.Management.Web/Views/Manage/Index.cshtml
@@ -50,6 +50,10 @@
                         @Model.Logins.Count [
                         @Html.ActionLink("Manage", "ManageLogins") ]
                     </dd>
+                    <dt>Delete your profile:</dt>
+                    <dd>
+                        [ @Html.ActionLink("Manage", "Delete") ]
+                    </dd>
                     @*
         Phone Numbers can used as a second factor of verification in a two-factor authentication system.
 
