--- a/CV.Management.Web/Views/Manage/Index.cshtml
+++ b/CV.Management.Web/Views/Manage/Index.cshtml
@@ -52,7 +52,7 @@
                     </dd>
                     <dt>Delete your profile:</dt>
                     <dd>
-                        [ @Html.ActionLink("Manage", "Delete") ]
+                        [ @Html.ActionLink("Delete", "Delete") ]
                     </dd>
                     @*
         Phone Numbers can used as a second factor of verification in a two-factor authentication system.
