--- a/CV.Management.Web/Views/Admin/Overview.cshtml
+++ b/CV.Management.Web/Views/Admin/Overview.cshtml
@@ -19,6 +19,7 @@
                     <tr>
                         <th>Full name</th>
                         <th>Username</th>
+                        <th>Profile language</th>
                         <th>Actions</th>
                         <th>Manage</th>
                     </tr>
@@ -31,7 +32,17 @@
                         @Html.HiddenFor(t => Model.Profiles[i].ProfileId)
                         <td>@Model.Profiles[i].FullName</td>
                         <td>@Model.Profiles[i].Username</td>
-                        <td>ENG: <span class="download_word_en"></span> <span class="download_ppt_en"></span> | LV: <span class="download_word_lv"></span> <span class="download_ppt_lv"></span></td>
+                        <td>@Model.Profiles[i].Language</td>
+
+                        @if (Model.Profiles[i].Language == "lv")
+                        {
+                            <td><span class="download_word_lv"></span> <span class="download_ppt_lv"></span></td>
+                        }
+                        else
+                        {
+                            <td><span class="download_word_en"></span> <span class="download_ppt_en"></span></td>
+                        }
+
                         <td>
                             <a class="view_user" href="/cv/profile?profileId=@Model.Profiles[i].ProfileId.ToString()"></a>
                             <a class="edit_user" href="/admin/EditUser?id=@Model.Profiles[i].ProfileId.ToString()"><i class="fas fa-cog"></i></a>
