--- a/CV.Management.Web/Views/Cv/Create.cshtml
+++ b/CV.Management.Web/Views/Cv/Create.cshtml
@@ -7,6 +7,7 @@
 @using (Html.BeginForm("Create", "CV", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
+    @Html.ValidationSummary("", new { @class = "text-danger" })
 
     <div class="container edit-user-container">
         <div class="form-group row">
@@ -19,6 +20,12 @@
             @Html.LabelFor(m => m.Email, new { @class = "col-sm-3 col-form-label" })
             <div class="col-sm-4">
                 @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
+            </div>
+        </div>
+        <div class="form-group row">
+            @Html.LabelFor(m => m.SelectedLanguage, new { @class = "col-sm-3 col-form-label" })
+            <div class="col-sm-4">
+                @Html.DropDownListFor(m => m.SelectedLanguage, Model.Languages, new { @class = "form-control" })
             </div>
         </div>
 
