--- a/CV.Management.Web/Views/Shared/EditorTemplates/CareerSummaryViewModel.cshtml
+++ b/CV.Management.Web/Views/Shared/EditorTemplates/CareerSummaryViewModel.cshtml
@@ -141,7 +141,7 @@
                                     <div class="col-xs-12">
                                         <div class="form-group">
                                             @Html.LabelFor(model => Model.Companies[i].Positions[j].Achievements, new { @class = "position-achievements-label control-label" })
-                                            @Html.TextAreaFor(model => Model.Companies[i].Positions[j].Achievements, new { @class = "position-achievements-input form-control", @rows = 5, @placeholder = @Resources.Achievements })
+                                            @Html.TextAreaFor(model => Model.Companies[i].Positions[j].Achievements, new { @class = "position-achievements-input form-control", @rows = 5, @placeholder = @Resources.AchievementsPlaceholder })
                                             @Html.ValidationMessageFor(model => Model.Companies[i].Positions[j].Achievements, "", new { @class = "position-achievements-validation" })
                                         </div>
                                     </div>
