Fixed other industry. Automated migration for identity.

--- a/CV.Management.Web/Views/Shared/EditorTemplates/CareerSummaryViewModel.cshtml
+++ b/CV.Management.Web/Views/Shared/EditorTemplates/CareerSummaryViewModel.cshtml
@@ -40,6 +40,8 @@
                                 @Html.ValidationMessageFor(model => Model.Companies[i].ParentCompanyName, "", new { @class = "company-parent-company-validation" })
                             </div>
                         </div>
+                    </div>
+                    <div class="row">
                         <div class="col-sm-6 col-xs-12">
                             <div class="form-group">
                                 @Html.LabelFor(m => Model.Companies[i].Industry, new { @class = "company-industry-label" })
